2008-11-12  Hans-Peter Nilsson  <hp@axis.com>

	PR gas/7025
	* input-scrub.c (input_scrub_include_sb): Make the position
	after the input have defined contents, a 0 character.

	* config/tc-cris.c (cris_relax_frag): Add missing case for
	ENCODE_RELAX (STATE_COND_BRANCH_PIC, STATE_DWORD).

	PR gas/7020
	* read.c (read_a_source_file): Rearrange evaluation order when
	looking for '=' to avoid conditional on undefined contents of
	input_line_pointer[1].

2008-11-06  Adam Nemet  <anemet@caviumnetworks.com>

	* config/tc-mips.c (COP_INSN): Change logic to always return false
	for FP instructions.

2008-11-06  Chao-ying Fu  <fu@mips.com>

	* config/tc-mips.c (validate_mips_insn): Add case '1'.
	(mips_ip): Add case '1' to process sync type.

2008-11-06  Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.tgt: Add m32c-*-rtems* and m32r-*-rtems*.

2008-11-04  Sterling Augustine  <sterling@tensilica.com>
	
	* config/tc-xtensa.c (tinsn_check_arguments): Check for multiple
	writes to the same register.
	
2008-11-04  Sterling Augustine  <sterling@tensilica.com>
	
	* config/tc-xtensa.c (xtensa_j_opcode): New.
	(xg_instruction_matches_option_term): Handle "FREEREG" option.
	(xg_build_to_insn): Likewise.  Update renamed tls_reloc reference.
	(md_begin): Initialize xtensa_j_opcode.
	(md_assemble): Update renamed tls_reloc reference.  Handle "j.l".
	(xg_assemble_vliw_tokens): Save free_reg info in the frag.
	(tinsn_immed_from_frag): Get free_reg info back out of the frag.
	(vinsn_to_insnbuf): Update renamed tls_reloc references.
	Distinguish extra argument for "FREEREG" from extra TLS argument.
	* config/tc-xtensa.h (struct xtensa_frag_type): Add free_reg field.
	* config/xtensa-istack.h (struct tinsn_struct): Rename tls_reloc
	field to extra_arg.
	* config/xtensa-relax.c (widen_spec_list): Add rules to relax "j.l".
	(build_transition): Handle "FREEREG" operand.
	* config/xtensa-relax.h (enum op_type): Add OP_FREEREG.
	
2008-10-31  Alan Modra  <amodra@bigpond.net.au>
